codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__apps_popup_loading_state.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 2144
expression: before
---
 Elpis · model gpt-5.6-sol · location /tmp/project

  Apps
  Loading installed and available apps...


›    Loading apps...  This updates when the full list is ready

  enter select · esc back
