codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__bedrock_mantle_astra_reasoning.snap
---
source: tui/src/chatwidget/tests/bedrock_catalog_tests.rs
assertion_line: 55
expression: "render_bottom_popup(&chat, 100)"
---
 Elpis · model openai.gpt-6.1-sol default · location /tmp/project

  Select Reasoning Level for GPT-6-Astra


› 1. Low (default)    Fast responses with lighter reasoning
  2. Medium           Balances speed and reasoning depth for everyday tasks
  3. High             Greater reasoning depth for complex problems
  4. Extra high       Extra high reasoning depth for complex problems
  5. More reasoning…  Max consumes usage limits faster

  enter default · s session · esc back
