codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__bedrock_mantle_models.snap
---
source: tui/src/chatwidget/tests/bedrock_catalog_tests.rs
expression: "render_bottom_popup(&chat, 100)"
---
 Elpis · model openai.gpt-6.1-sol default · location /tmp/project

  Choose a mind and effort
  Provider: OpenAI (openai)
  Route: the provider's default endpoint
  Protocol: OpenAI Responses
  Credential: your OpenAI sign-in


  1. Change provider…       Currently OpenAI
› 2. GPT-6.1 Sol (current)  Latest workhorse model for coding and everyday work.
  3. GPT-6-Astra            Frontier intelligence for the most demanding work.
  4. GPT-6 Sol              Previous generation workhorse model.
  5. GPT-6 Luna             Fast and affordable model for easier tasks.
  6. GPT-5.6 Sol            Older generation workhorse model.
  7. GPT-5.6 Terra          Older balanced model for straightforward work.
  8. GPT-5.6 Luna           Older fast and efficient model.
↓
  enter select · esc back
